--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title:            'Eisen Blog'
 tagline:          'A Jekyll theme'
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:              https://aisensiy.github.io
-baseurl:          /
+baseurl:          https://aisensiy.github.io
 
 author:
   name:           'Eisen Xu'
