--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ permalink:        pretty
 
 # Setup
 title:            'Eisen Blog'
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+tagline:          'Blog On Jekyll'
+description:      ''
 url:              https://aisensiy.github.io
 baseurl:          https://aisensiy.github.io
 
