--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -1,7 +1,7 @@
 spec:
   name: aisensiy-blog
   static_sites:
-  - build_command: bundle exec jekyll build -d ./public
+  - build_command: bundle exec jekyll build -d ./_site
     environment_slug: jekyll
     git:
       branch: main
