feat: add subscription for graphql

--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -5,5 +5,5 @@ spec:
     environment_slug: jekyll
     git:
       branch: main
-      repo_clone_url: https://github.com/aisensiy/aisensiy.github.com/.git
+      repo_clone_url: https://github.com/aisensiy/aisensiy.github.com.git
     name: aisensiy-blog
