chore: gh-deploy

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby"
   ],
   "scripts": {
+    "deploy": "gatsby build && gh-pages -d public -b master",
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "autoprefixer": "^10.3.1",
     "gatsby-plugin-postcss": "^4.9.0",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
   }
