--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^3.9.0",
     "gatsby-plugin-catch-links": "^3.9.0",
     "gatsby-plugin-sharp": "^3.9.0",
+    "gatsby-remark-autolink-headers": "^4.6.0",
     "gatsby-remark-images": "^5.6.0",
     "gatsby-remark-prismjs": "^5.6.0",
     "gatsby-source-filesystem": "^3.9.0",
