--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,4 +17,7 @@ jobs:
     - name: install deps
       run: yarn install --frozen-lockfile
     - name: deploy
-      run: yarn run deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_branch: main
