chore: add build

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,8 +16,11 @@ jobs:
         node-version: '14'
     - name: install deps
       run: yarn install --frozen-lockfile
+    - name: build
+      run: yarn run build
     - name: deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: main
+        publish_dir: ./public
