--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "gatsby": "^3.9.0",
     "gatsby-plugin-catch-links": "^3.9.0",
+    "gatsby-plugin-google-gtag": "^3.9.0",
     "gatsby-plugin-sharp": "^3.9.0",
     "gatsby-remark-autolink-headers": "^4.6.0",
     "gatsby-remark-images": "^5.6.0",
