--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^3.9.0",
     "gatsby-plugin-catch-links": "^3.9.0",
     "gatsby-plugin-google-gtag": "^3.9.0",
+    "gatsby-plugin-react-helmet": "^4.9.0",
     "gatsby-plugin-sharp": "^3.9.0",
     "gatsby-remark-autolink-headers": "^4.6.0",
     "gatsby-remark-images": "^5.6.0",
@@ -27,7 +28,8 @@
     "gatsby-transformer-remark": "^4.6.0",
     "prismjs": "^1.24.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
