--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "gatsby": "^3.9.0",
     "gatsby-plugin-catch-links": "^3.9.0",
     "gatsby-plugin-google-gtag": "^3.9.0",
