--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^3.9.0",
     "gatsby-plugin-catch-links": "^3.9.0",
     "gatsby-plugin-google-gtag": "^3.9.0",
+    "gatsby-plugin-manifest": "^3.11.0",
     "gatsby-plugin-react-helmet": "^4.9.0",
     "gatsby-plugin-sharp": "^3.9.0",
     "gatsby-remark-autolink-headers": "^4.6.0",
