chore: add plausible

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^3.9.0",
     "gatsby-plugin-catch-links": "^3.9.0",
     "gatsby-plugin-google-gtag": "^3.9.0",
+    "gatsby-plugin-plausible": "^0.0.7",
     "gatsby-plugin-react-helmet": "^4.9.0",
     "gatsby-plugin-sharp": "^3.9.0",
     "gatsby-remark-autolink-headers": "^4.6.0",
