--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-remark-autolink-headers": "^4.6.0",
     "gatsby-remark-images": "^5.6.0",
     "gatsby-remark-prismjs": "^5.6.0",
+    "gatsby-remark-video": "^1.2.5",
     "gatsby-source-filesystem": "^3.9.0",
     "gatsby-transformer-remark": "^4.6.0",
     "prismjs": "^1.24.1",
