--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
-    "gatsby": "^3.9.0",
-    "gatsby-plugin-catch-links": "^3.9.0",
-    "gatsby-plugin-google-gtag": "^3.9.0",
+    "eslint-config-react-app": "6.0.0",
+    "gatsby": "^4.3.0",
+    "gatsby-plugin-catch-links": "^4.3.0",
+    "gatsby-plugin-google-gtag": "^4.3.0",
     "gatsby-plugin-plausible": "^0.0.7",
-    "gatsby-plugin-react-helmet": "^4.9.0",
-    "gatsby-plugin-sharp": "^3.9.0",
-    "gatsby-remark-autolink-headers": "^4.6.0",
-    "gatsby-remark-images": "^5.6.0",
-    "gatsby-remark-prismjs": "^5.6.0",
+    "gatsby-plugin-react-helmet": "^5.3.0",
+    "gatsby-plugin-sharp": "^4.3.0",
+    "gatsby-remark-autolink-headers": "^5.3.0",
+    "gatsby-remark-images": "^6.3.0",
+    "gatsby-remark-prismjs": "^6.3.0",
     "gatsby-remark-video": "^1.2.5",
-    "gatsby-source-filesystem": "^3.9.0",
-    "gatsby-transformer-remark": "^4.6.0",
+    "gatsby-source-filesystem": "^4.3.0",
+    "gatsby-transformer-remark": "^5.3.0",
     "prismjs": "^1.25.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -36,7 +37,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
-    "gatsby-plugin-postcss": "^4.9.0",
+    "gatsby-plugin-postcss": "^5.3.0",
     "gh-pages": "^3.2.3",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
