--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -14,6 +14,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+        token: ${{ secrets.GH_PAT }}
+        
     - uses: wangchucheng/git-repo-sync@v0.1.0
       with:
         target-url: ${{ secrets.REMOTE_GIT }}
