--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-plausible": "^0.0.7",
     "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-sharp": "^4.3.0",
+    "gatsby-plugin-umami": "^0.1.3",
     "gatsby-remark-autolink-headers": "^5.3.0",
     "gatsby-remark-images": "^6.3.0",
     "gatsby-remark-prismjs": "^6.3.0",
