--- a/package.json
+++ b/package.json
@@ -16,29 +16,30 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.4",
     "eslint-config-react-app": "6.0.0",
-    "gatsby": "^4.3.0",
+    "gatsby": "^4.19.0",
     "gatsby-plugin-catch-links": "^4.3.0",
     "gatsby-plugin-google-gtag": "^4.3.0",
     "gatsby-plugin-react-helmet": "^5.3.0",
-    "gatsby-plugin-sharp": "^4.3.0",
+    "gatsby-plugin-sharp": "^4.19.0",
     "gatsby-remark-autolink-headers": "^5.3.0",
-    "gatsby-remark-images": "^6.3.0",
-    "gatsby-remark-prismjs": "^6.3.0",
+    "gatsby-remark-images": "^6.19.0",
+    "gatsby-remark-prismjs": "^6.19.0",
     "gatsby-remark-video": "^1.2.5",
-    "gatsby-source-filesystem": "^4.3.0",
-    "gatsby-transformer-remark": "^5.3.0",
+    "gatsby-source-filesystem": "^4.19.0",
+    "gatsby-transformer-remark": "^5.19.0",
     "prismjs": "^1.25.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "gatsby-plugin-postcss": "^5.3.0",
     "gh-pages": "^3.2.3",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7"
+    "tailwindcss": "^3.1.6"
   }
 }
